add sqs and sns integration
